--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -29,7 +29,9 @@
     transition: all 0.2s linear !important;
   }
 }
-
+.slick-disabled {
+  display: none !important;
+}
 .section-share {
   &.section-specialty {
     background: #f5f5f5;
@@ -63,7 +65,7 @@
           background-image: url(../../assets/medical-facility/viet-duc.jpg);
         }
         &.section-outstanding-doctor {
-          background-image: url(../../assets/outstanding-doctor/anh-dai-dien-bs.jpg);
+          // background-image: url(../../assets/outstanding-doctor/anh-dai-dien-bs.jpg);
           width: 120px;
           height: 120px;
           margin: 0 auto;
