--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   background: #fff;
-  z-index: 9999;
+  z-index: 999;
   .home-header-content {
     width: 100%;
     height: 100%;
@@ -108,10 +108,7 @@
     // border: 1px solid red;
     height: 65%;
     padding-top: 15px;
-    background-image: linear-gradient(
-      rgba(0, 0, 0, 0.25),
-      rgba(255, 255, 255, 0.1)
-    );
+    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0.1));
     .title1 {
       text-align: center;
       color: #fff;
@@ -157,11 +154,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    background-image: linear-gradient(
-      rgba(255, 255, 255, 0.1),
-      rgba(255, 255, 255, 0.9),
-      rgba(255, 255, 255, 1)
-    );
+    background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 1));
     padding-bottom: 10px;
     .options {
       text-align: center;
@@ -203,3 +196,10 @@
     }
   }
 }
+// @media only screen and (max-width: 1024px) {
+//   .home-header-container {
+//     .home-header-content {
+//       display: none;
+//     }
+//   }
+// }
