--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -29,6 +29,14 @@
       }
     }
   }
+  .xem-them {
+    a {
+      color: #45c3d2;
+      cursor: pointer;
+      padding-left: 20px;
+      text-decoration: none;
+    }
+  }
   .price {
     margin-bottom: 5px;
     .price-text {
