--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -62,3 +62,32 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .doctor-deltail-container .intro-doctor {
+    padding: 0;
+  }
+  .doctor-deltail-container .schedule-doctor {
+    margin: 0;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+  .doctor-deltail-container .schedule-doctor .content-left {
+    width: 100%;
+  }
+  .doctor-deltail-container .schedule-doctor .content-right {
+    width: 100%;
+    padding-bottom: 5px;
+  }
+  .doctor-deltail-container .deitail-info-doctor {
+    padding: 10px 20px;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .doctor-deltail-container .intro-doctor .content__left {
+    width: 90px;
+    height: 90px;
+  }
+}
