--- a/src/containers/Patient/Doctor/Modal/BookingModal.scss
+++ b/src/containers/Patient/Doctor/Modal/BookingModal.scss
@@ -1,6 +1,6 @@
 .booking-modal__container {
   .booking-modal__content {
-    height: 80vh;
+    // height: 90vh;
     display: flex;
     flex-direction: column;
     .booking-modal__header {
