--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -85,8 +85,16 @@
   .detail-specialty-container .row.specialty-app .each-doctor .content-right {
     width: 100%;
   }
-  .col-6 {
-    flex: 0 0 0;
-    max-width: 100%;
+  .content-left {
+    &.col-6 {
+      flex: 0 0 0;
+      max-width: 100%;
+    }
+  }
+  .content-right {
+    &.col-6 {
+      flex: 0 0 0;
+      max-width: 100%;
+    }
   }
 }
